opencore/browser/css/opencore.css
/* ... */
.formHelp /*FIXME */ {
  font-weight: normal;
}
#oc-content-sidebar .smallText,
#oc-content-sidebar .discreetText {
  font-size: 10px;
}
.oc-discreetText {
  color: #665D55;
}
a, a:visited {
  color: #6BA12A;
}
a:hover,
ul.oc-tabs li a.oc-actionLink:hover {
  color: #EB852B;
  text-decoration: underline;
}

/* Heading Blocks */

.oc-headingBlock {
  margin-bottom: 0.75em;
}
.oc-headingBlock h1,
.oc-headingBlock h2,
.oc-headingBlock h3,
.oc-headingBlock h4 {
  margin: 0;
  margin-bottom: 0.125em;
}
.oc-headingBlock .oc-headingContext {
  margin: 0 0 1em;
}
.oc-headingSimple a {
  text-decoration: none;
}
.oc-headingSimple a:hover {
  text-decoration: underline;
}

/* Form bits */
form {
  margin: 0;
}
select,
input,
button,
textarea {
  /* ToDo Style buttons nicely */
  /*border: 1px solid #999; */
  margin: 0;
  font-size: 10px;
  vertical-align: bottom;
}
input,
button,
textarea {
  padding: 0.25em;
}
textarea {
  display: block;
  visibility: hidden;
  margin-bottom: 1em;
}
fieldset {
  border: none;
  padding: 0;
  margin: 0 0 1em;
}
label {
  font-weight: bold;
}
address {
  font-style: normal;
}

img {
   border: none;
}
hr {
  border: 1px solid #ccc;
  padding: 0;
  margin: 1em 0;
}
abbr, acronym {
  border-bottom: none;
}
.oc-clearElement {
  visibility: hidden;
  clear: both;
  height: 0;
  padding: 0;
  margin: 0;
}

/* OTHER stuff that needs to be sorted out 
-------------------------------------------- */

.oc-closeButton, oc-closeButton:hover {
  position: absolute;
  top: 0.0625em;
  right: 0.25em;
  display: block;
  text-decoration: none !important;
  font-size: 14px;
  font-weight: bold;
  line-height: normal;
  color: #333 !important;
}
.oc-closeButton:hover {
  color: #FFF !important;
  background-color: none;
}
.oc-js-closeable {
	position: relative;
}
.oc-tasktracker h1,
.oc-tasktracker h2,
.oc-tasktracker h3,
.oc-tasktracker h4,
.oc-tasktracker h5,
.oc-tasktracker h6 {
  margin-top: 0;
}

/* WIKI CONTENT + LEGACY support for pages generated with Kupu 
-------------------------------------------- */

.oc-wiki-content br {
  line-height: 1em;
}
.oc-wiki-content h1, 
.oc-wiki-content h2, /* Kupu: Heading */
.oc-wiki-content h3, /* Kupu: Subheading */
.oc-wiki-content h4, 
.oc-wiki-content h5 {
  font-weight: bold;
  margin: 0.5em 0 0.25em;
}
.oc-wiki-content p,
.oc-wiki-content pre,
.oc-wiki-content ul,
.oc-wiki-content ol {
  margin: 0.75em 0;
}
.oc-wiki-content ul,
.oc-wiki-content ol {
  padding-left: 1.5em;
}
.oc-wiki-content li {
  margin: 0 0 0.75em;
}
/* Kupu: Literal */
.oc-wiki-content pre {
  background: #eee;
  border: 1px solid #ccc;
  padding: 0.75em;
  margin: 0 1em 1em; 
  overflow: auto;
}
/* Kupu: Discreet */
.oc-wiki-content .discreet {
  color: #665D55;
  font-size: 11px;
}
/* Kupu: Pull-quote */
.oc-wiki-content .pullquote {
  width: 35%;
  float: right;
  clear: right;
  border-left: 4px solid #ccc;
  padding-left: 1em;
  margin-left: 1em;
  overflow: auto;
}
.oc-wiki-content .pullquote h1, 
.oc-wiki-content .pullquote h2, 
.oc-wiki-content .pullquote h3, 
.oc-wiki-content .pullquote h4, 
.oc-wiki-content .pullquote h5 {
  margin-top: 0;
}
/* Kupu: Callout */
.oc-wiki-content .callout {
  font-family: Palatino, Georgia, serif;
  font-size: 18px;
  font-style: italic;
  margin: 1em 0;
  line-height: 1.25em;
  margin: 1em auto;
  width: 60%;  
}
.oc-wiki-content .pullquote ul {
  padding-left: 1em;
}
/* Kupu: Listing */
.oc-wiki-content table.listing {
	border-collapse: collapse;
  border: 1px solid #eee;
  margin-bottom: 1em;
  font-size: 95%;
}
.oc-wiki-content table.listing th,
.oc-wiki-content table.listing td {
  padding: 0.25em 0.5em;
}
.oc-wiki-content table.listing th {
  background-color: #eee;
  border: 1px solid #ccc;
  text-align: left;
}
.oc-wiki-content table.listing td {
  border: 1px solid #ccc;
}

